2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of bug #13670: forgotten reset/each statement caused side effect of using foreach statement
	* Fixed bug #14456: SQL parser doesn't accept ALTER TABLE statement without CHANGE, DROP or ADD keyword
	* Fixed bug #13934: Side-effect of substr in t3lib_cs (thanks to Rens Admiraal)

2010-05-27  Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #13604: PHP Warning from t3lib_loadmodules after installing extbase, because $TBE_MODULES['_dispatcher'] is not unset (thanks to Marc Bastian Heinrichs)

2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #14388: TypoScript templates containing a "$1" become corrupted

2010-05-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14489: htmlArea RTE: color dialogues do not show all configured colors
	* Fixed bug #14491: htmlArea RTE: disableColorPicker not always honoured
	* Fixed bug #14494: htmlArea RTE: backpath is not correctly set
	* Follow-up to issue #14494: htmlArea RTE: backpath is not correctly set

2010-05-27  Oliver Hader  <oliver@typo3.org>

	* Follow-up to #14465: Missing argument when rendering language preview in page module

2010-05-26  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14486: Added missing icons for the new iconset (thanks to Steffen Ritter)
	* Added feature #14465: Make use of the new sprite API through the TYPO3 core (thanks to Steffen Ritter)
	* Followup to feature #14465: Remove extra semicolon at end of line

2010-05-26  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #13443: Wrong image shown in WEB->PERM (thanks to Stephan Kellermayr) 

2010-05-26  Ingo Renner  <ingo@typo3.org>

	* Added feature #14463: Add post initialization hook for tslib_cObj
	* Follow-up to #14463: Added the new tslib_content_PostInitHook interface to core_autoload.php
	* Fixed issue #14480: tslib_cObj->start() sets a member "data", but not "table"

2010-05-26  Steffen Kamper  <info@sk-typo3.de>
